--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </h1>
 <h2>講義内容</h2>
 <p><a href="lesson1/index.html">第５回　初めてのWebGL</a></p>
-<p><a href="lesson2/index.html">第６回　モデリングとシェーディングの改良</a></p>
+<p><a href="lesson2/index.html">第６回　モデリングとシェーディング</a></p>
+<p><a href="lesson3/index.html">第７回　</a>テクスチャマッピング</p>
 </body>
 </html>
