--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <h2>講義内容</h2>
 <p><a href="lesson1/index.html">第５回　初めてのWebGL</a></p>
 <p><a href="lesson2/index.html">第６回　モデリングとシェーディング</a></p>
-<p><a href="lesson3/index.html">第７回　</a>テクスチャマッピング</p>
+<p><a href="lesson3/index.html">第７回　テクスチャマッピング</a></p>
 </body>
 </html>
