--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,9 +8,12 @@
     <h1>WebGL演習（３）</h1>
     <h2>テクスチャマッピング</h2>
     <p>
-        テクスチャ―マッピング例：<a href="sample7-cit(1).html">sample7-cit(1).html</a><br>
-        <a href="sample7-cit(2).html">sample7-cit(2).html</a><br>
-        <a href="sample7-cit(3).html">sample7-cit(3).html</a><br>
+        テクスチャ―マッピング例：
+        <ul>
+            <li><a href="sample7-cit(1).html">sample7-cit(1).html</a></li>
+            <li><a href="sample7-cit(2).html">sample7-cit(2).html</a></li>
+            <li><a href="sample7-cit(3).html">sample7-cit(3).html</a></li>
+        </ul>
         顔のテクスチャ―：<a href="sample7-face.html">sample7-face.html</a><br>
         ビルを作る：<a href="sample7-buil.html">sample7-buil.html</a><br>
         バンプマッピング例：<a href="sample7-bump.html">sample7-bunp.html</a><br>
