--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -8,9 +8,9 @@
     <h1>WebGL演習（３）</h1>
     <h2>テクスチャマッピング</h2>
     <p>
-        テクスチャ―マッピング例：
+        インタラクティブとビルボード例：
         <ul>
-            <li><a href="sample7-cit(1).html">sample7-cit(1).html</a></li>
+            <li><a href="sample8-1.html">sample8-1.html</a></li>
             <li><a href="sample7-cit(2).html">sample7-cit(2).html</a></li>
             <li><a href="sample7-cit(3).html">sample7-cit(3).html</a></li>
         </ul>
