--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>WebGL(3)</title>
+    <title>WebGL(4)</title>
 </head>
 <body>
-    <h1>WebGL演習（３）</h1>
-    <h2>テクスチャマッピング</h2>
+    <h1>WebGL演習（４）</h1>
+    <h2>インタラクティブとビルボード</h2>
     <p>
-        インタラクティブとビルボード例：
+        インタラクティブ（オービットコントロール）例：
         <ul>
             <li><a href="sample8-1.html">sample8-1.html</a></li>
             <li><a href="sample7-cit(2).html">sample7-cit(2).html</a></li>
