--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -11,12 +11,13 @@
         インタラクティブ（オービットコントロール）例：
         <ul>
             <li><a href="sample8-1.html">sample8-1.html</a></li>
-            <li><a href="sample7-cit(2).html">sample7-cit(2).html</a></li>
-            <li><a href="sample7-cit(3).html">sample7-cit(3).html</a></li>
         </ul>
-        顔のテクスチャ―：<a href="sample7-face.html">sample7-face.html</a><br>
-        ビルを作る：<a href="sample7-buil.html">sample7-buil.html</a><br>
-        バンプマッピング例：<a href="sample7-bump.html">sample7-bunp.html</a><br>
+        ビルボード例：
+        <ul>
+            <li><a href="sample8-2.html">sample8-2.html</a></li>
+            <li><a href="sample8-3.html">sample8-2.html</a></li>
+            <li><a href="sample8-4.html">sample8-2.html</a></li>
+        </ul>       
     </p>
 </body>
 </html>
