--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -11,12 +11,13 @@
         インタラクティブ（オービットコントロール）例：
         <ul>
             <li><a href="sample8-1.html">sample8-1.html</a></li>
+            <li><a href="sample8-2.html">sample8-2.html</a></li>
         </ul>
         ビルボード例：
         <ul>
-            <li><a href="sample8-2.html">sample8-2.html</a></li>
             <li><a href="sample8-3.html">sample8-3.html</a></li>
             <li><a href="sample8-4.html">sample8-4.html</a></li>
+            <li><a href="sample8-5.html">sample8-5html</a></li>
         </ul>       
     </p>
 </body>
