--- a/lesson4/sample8-2.html
+++ b/lesson4/sample8-2.html
@@ -1,160 +1,70 @@
-<!DOCTYPE html>
-
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script src="OrbitControls.js"></script>
+    <script>
+      // ページの読み込みを待つ
+      window.addEventListener('load', init);
 
-<head>
-  <title>タグ</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-  <script src="OrbitControls.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
-<style>
-body {
-  /* set margin to 0 and overflow to hidden, to go fullscreen */
-  margin: 0;
-  overflow: hidden;
-}
-</style>
-</head>
-<body>
+      function init() {
+        // サイズを指定
+        const width = 960;
+        const height = 540;
 
-  <div id="Stats-output">
-</div>
-<!-- Div which will hold the Output -->
-<div id="webgl-output">
-</div>
+        // レンダラーを作成
+        const renderer = new THREE.WebGLRenderer({
+          canvas: document.querySelector('#myCanvas')
+        });
+        renderer.setSize(width, height);
 
-<!-- Javascript code that runs our Three.js examples -->
-<script type="text/javascript">
+        // シーンを作成
+        const scene = new THREE.Scene();
 
+        // カメラを作成
+        const camera = new THREE.PerspectiveCamera(45, width / height);
+        // カメラの初期座標を設定
+        camera.position.set(0, 0, 1000);
 
-const IMAGE_DATA = [
-   // src, width, height, posX, posY, posZ
-  ["sun.png", 50, 50, 0, 0, 0],
-  ["star.png", 15, 12, 50, 0, 0],
-  ["star.png", 15, 12, 50, 50, 0],
-  ["star.png", 15, 12, -50, 10, 50],
-  ["star.png", 15, 12, -50, 10, -50],
-];
+        // カメラコントローラーを作成
+        const controls = new THREE.OrbitControls(camera,document.body);
+  
+        // 平行光源1
+        var directionalLight1 = new THREE.DirectionalLight(0xffffff);
+        directionalLight1.position.set(100, 100, 100);
+        // シーンに追加
+        scene.add(directionalLight1);
+        // 平行光源2
+        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
+        directionalLight2.position.set(-100, 100, 100);
+        // シーンに追加
+        scene.add(directionalLight2);
 
+        // テクスチャー読み込み
+        var textureLoader = new THREE.TextureLoader();  
+        var texture = textureLoader.load("img/earth.png");
+        var mat = new THREE.MeshPhongMaterial();
+        mat.map = texture;
 
-class Sample {
+        // 地球を作成(原点に作成)
+        var geometry = new THREE.SphereGeometry(300, 30, 30);
+        var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
+        var earth = new THREE.Mesh(geometry, mat);
+        scene.add(earth);
 
-  constructor (opts = {}) {
+        tick();
 
-    this.width = window.innerWidth;
-    this.height = window.innerHeight;
-    this.output = opts.output || document.createElement('div');
-
-    this.degree = 0;
-
-    this.init();
-  }
-
-  init () {
-    { // renderer
-      this.renderer = new THREE.WebGLRenderer({ antialias: true });
-      this.renderer.setClearColor( 0x222222 ); // 背景色
-      this.renderer.setPixelRatio(window.devicePixelRatio || 1);
-      this.renderer.setSize( this.width, this.height );
-      this.output.appendChild( this.renderer.domElement );
-    }
-    { // scene
-      this.scene = new THREE.Scene();
-    }
-    { // lights
-      const ambientLight = new THREE.AmbientLight(0xffffff);
-      this.scene.add(ambientLight);
-    }
-    { // camera
-      const perscamera = new THREE.PerspectiveCamera( 45, this.width / this.height, 1, 10000 ); // fov(視野角),aspect,near,far
-      const orthocamera = new THREE.OrthographicCamera( this.width / -2, this.width / 2, this.height / 2, this.height / -2, 1, 10000 );
-      this.camera = perscamera;
-      this.camera.position.set( 100, 100, 100 );
-      this.camera.lookAt( this.scene.position );
-    }
-    { // helper
-      const gridHelper = new THREE.GridHelper(200,50); // size, step
-      this.scene.add(gridHelper);
-      const axisHelper = new THREE.AxisHelper(200,50);
-      this.scene.add(axisHelper);
-    }
-    { // controls
-      this.controls = new THREE.OrbitControls(this.camera);
-      this.controls.autoRotate = true;
-    }
-    { // texture
-      this.arr = [];
-      for (let [i, src] of IMAGE_DATA.entries()) {
-        const d = IMAGE_DATA[i];
-        const mesh = this.createMesh(d[0], d[1], d[2], d[3], d[4], d[5]);
-        this.scene.add(mesh);
-        this.arr.push(mesh);
+        // 毎フレーム時に実行されるループイベントです
+        function tick() {
+          // レンダリング
+          renderer.render(scene, camera);
+          requestAnimationFrame(tick);
+        }
       }
-    }
+    </script>
+  </head>
 
-    this.render();
-    window.addEventListener('resize', () => {
-        this.onResize();
-    }, false);
-
-  }
-
-  render () {
-    requestAnimationFrame( () => {
-      this.render();
-    });
-    this.controls.update();
-    this.renderer.render( this.scene, this.camera );
-
-    // カメラの向きに回転
-    for (let val of this.arr) {
-      // val.quaternion.copy(this.camera.quaternion);
-      val.rotation.setFromRotationMatrix(this.camera.matrix);
-    }
-
-  }
-
-
-  createMesh (src, width, height, posX, posY, posZ) {
-    const geom = new THREE.PlaneGeometry(width,height,20);
-    const PATH = './img/';
-    const textureLoader = new THREE.TextureLoader();
-    const texture = textureLoader.load(PATH + src);
-    const mat = new THREE.MeshBasicMaterial({transparent:true});
-    mat.map = texture;
-
-    const mesh = new THREE.Mesh(geom, mat);
-    mesh.position.set(posX, posY, posZ);
-
-    return mesh;
-  }
-
-  onResize () {
-    this.camera.aspect = window.innerWidth / window.innerHeight;
-    this.camera.updateProjectionMatrix();
-    this.renderer.setSize( window.innerWidth, window.innerHeight );
-  }
-
-}
-
-
-
-(() => {
-
-  const sample = new Sample({
-    output: document.getElementById('webgl-output')
-  });
-
-})();
-
-
-
-
-
-
-
-
-</script>
-</body>
+  <body>
+    <canvas id="myCanvas"></canvas>
+  </body>
 </html>
