--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -10,8 +10,8 @@
     <p>
         インタラクティブ（オービットコントロール）例：
         <ul>
-            <li><a href="sample8-1.html">sample8-1.html</a></li>
-            <li><a href="sample8-2.html">sample8-2.html</a></li>
+            <li><a href="sample8-1.html">sample8-1.html（単純な図形）</a></li>
+            <li><a href="sample8-2.html">sample8-2.html（テクスチャ―付き）</a></li>
         </ul>
         ビルボード例：
         <ul>
