--- a/lesson4/sample8-3.html
+++ b/lesson4/sample8-3.html
@@ -47,7 +47,7 @@
         mat.map = texture;
 
         // 地球を作成(原点に作成)
-        var geometry = new THREE.PlaneGeometry(100, 30, 30);
+        var geometry = new THREE.PlaneGeometry(100, 200);
         var earth = new THREE.Mesh(geometry, mat);
         scene.add(earth);
 
