--- a/lesson4/sample8-3.html
+++ b/lesson4/sample8-3.html
@@ -17,6 +17,8 @@
           canvas: document.querySelector('#myCanvas')
         });
         renderer.setSize(width, height);
+        // 背景の色を設定
+        renderer.setClearColor(0xffffff);
 
         // シーンを作成
         const scene = new THREE.Scene();
