--- a/lesson4/sample8-3.html
+++ b/lesson4/sample8-3.html
@@ -18,7 +18,7 @@
         });
         renderer.setSize(width, height);
         // 背景の色を設定
-        renderer.setClearColor(0xffffff);
+        renderer.setClearColor(0xeeeeff);
 
         // シーンを作成
         const scene = new THREE.Scene();
@@ -49,7 +49,7 @@
         mat.map = texture;
 
         // 木を作成(原点に作成)
-        var geometry = new THREE.PlaneGeometry(50, 100);
+        var geometry = new THREE.PlaneGeometry(75, 100);
         var earth = new THREE.Mesh(geometry, mat);
         scene.add(earth);
 
