--- a/lesson4/sample8-3.html
+++ b/lesson4/sample8-3.html
@@ -73,6 +73,7 @@
         // 木2を作成(原点に作成)
         var tree2 = new THREE.Mesh(geometry, mat2);
         tree2.position.set(-100, 0, 100);
+        tree2.rotation.set(0,1.7,0);
         scene.add(tree2);
 
         // 木3テクスチャー読み込み
@@ -84,6 +85,7 @@
         // 木3を作成(原点に作成)
         var tree3 = new THREE.Mesh(geometry, mat3);
         tree3.position.set(0, 0, 200);
+        tree2.rotation.set(0,1.7,0);
         scene.add(tree3);
 
         tick();
