--- a/lesson4/sample8-3.html
+++ b/lesson4/sample8-3.html
@@ -54,7 +54,7 @@
         scene.add(tree0);
 
         // 木1テクスチャー読み込み
-        var textureLoader = new THREE.TextureLoader();  
+        //var textureLoader = new THREE.TextureLoader();  
         var texture1 = textureLoader.load("img/tree1.png");
         var mat1 = new THREE.MeshLambertMaterial({transparent: true});
         mat1.map = texture1;
@@ -65,7 +65,7 @@
         scene.add(tree1);
 
         // 木2テクスチャー読み込み
-        var textureLoader = new THREE.TextureLoader();  
+        //var textureLoader = new THREE.TextureLoader();  
         var texture2 = textureLoader.load("img/tree2.png");
         var mat2 = new THREE.MeshLambertMaterial({transparent: true});
         mat2.map = texture2;
@@ -77,7 +77,7 @@
         scene.add(tree2);
 
         // 木3テクスチャー読み込み
-        var textureLoader = new THREE.TextureLoader();  
+        //var textureLoader = new THREE.TextureLoader();  
         var texture3 = textureLoader.load("img/tree3.png");
         var mat3 = new THREE.MeshLambertMaterial({transparent: true});
         mat3.map = texture3;
