--- a/lesson4/sample8-4.html
+++ b/lesson4/sample8-4.html
@@ -49,12 +49,11 @@
         mat0.map = texture0;
 
         // 木0を作成(原点に作成)
-        var geometry = new THREE.PlaneGeometry(75, 100);
-        var tree0 = new THREE.Sprite(geometry, mat0);
+        //var geometry = new THREE.PlaneGeometry(75, 100);
+        var tree0 = new THREE.Sprite(mat0);
         scene.add(tree0);
 
         // 木1テクスチャー読み込み
-        var textureLoader = new THREE.TextureLoader();  
         var texture1 = textureLoader.load("img/tree1.png");
         var mat1 = new THREE.MeshLambertMaterial({transparent: true});
         mat1.map = texture1;
@@ -65,7 +64,6 @@
         scene.add(tree1);
 
         // 木2テクスチャー読み込み
-        var textureLoader = new THREE.TextureLoader();  
         var texture2 = textureLoader.load("img/tree2.png");
         var mat2 = new THREE.MeshLambertMaterial({transparent: true});
         mat2.map = texture2;
@@ -77,7 +75,6 @@
         scene.add(tree2);
 
         // 木3テクスチャー読み込み
-        var textureLoader = new THREE.TextureLoader();  
         var texture3 = textureLoader.load("img/tree3.png");
         var mat3 = new THREE.MeshLambertMaterial({transparent: true});
         mat3.map = texture3;
