--- a/lesson4/sample8-4.html
+++ b/lesson4/sample8-4.html
@@ -44,9 +44,10 @@
 
         // 木0テクスチャー読み込み
         var textureLoader = new THREE.TextureLoader();  
-        var texture0 = textureLoader.load("img/tree0.png");
+        var texture = textureLoader.load("img/tree0.png");
+        texture.needsUpdate = true;
         var mat0 = new THREE.SpriteMaterial({transparent: true});
-        mat0.map = texture0;
+        mat0.map = texture;
 
         // 木0を作成(原点に作成)
         //var geometry = new THREE.PlaneGeometry(75, 100);
