--- a/lesson4/sample8-4.html
+++ b/lesson4/sample8-4.html
@@ -47,6 +47,10 @@
         });
 
         const sprite = new THREE.Sprite(material);
+        sprite.position.x = 0;
+        sprite.position.y = 0;
+        sprite.position.z = 0;
+        sprite.scale.set(100,100,100);
         scene.add(sprite);
 
 
