--- a/lesson4/sample8-4.html
+++ b/lesson4/sample8-4.html
@@ -42,9 +42,10 @@
         // シーンに追加
         scene.add(directionalLight2);
 
-        const material = new THREE.SpriteMaterial({
-                 map: new THREE.TextureLoader().load("img/tree0.png"),
-        });
+        // 木をスプライトで作成
+        var textureLoader = new THREE.TextureLoader();  
+        var texture = textureLoader.load("img/tree0.png");
+        const material = new THREE.SpriteMaterial({ map: texture,});
 
         const sprite = new THREE.Sprite(material);
         sprite.position.x = 0;
@@ -52,19 +53,6 @@
         sprite.position.z = 0;
         sprite.scale.set(100,100,100);
         scene.add(sprite);
-
-
-        // 木0テクスチャー読み込み
-        //var textureLoader = new THREE.TextureLoader();  
-        //var texture = textureLoader.load("img/tree0.png");
-        //texture.needsUpdate = true;
-       // var mat0 = new THREE.SpriteMaterial({transparent: true});
-       // mat0.map = texture;
-
-        // 木0を作成(原点に作成)
-        //var geometry = new THREE.PlaneGeometry(75, 100);
-        //var tree0 = new THREE.Sprite(mat0);
-        //scene.add(tree0);
 
 
         tick();
