--- a/lesson4/sample8-5.html
+++ b/lesson4/sample8-5.html
@@ -42,7 +42,7 @@
         // シーンに追加
         scene.add(directionalLight2);
 
-        // 木1をスプライトで作成
+        // 木0をスプライトで作成
         var textureLoader = new THREE.TextureLoader();  
         var texture0 = textureLoader.load("img/tree0.png");
         const material0 = new THREE.SpriteMaterial({ map: texture0,});
@@ -54,16 +54,16 @@
         sprite0.scale.set(100,100,100);
         scene.add(sprite0);
 
-        // 木をスプライトで作成 
-        var texture1 = textureLoader.load("img/tree1.png");
-        const material1 = new THREE.SpriteMaterial({ map: texture1,});
+        // 木1をスプライトで作成 
+        //var texture1 = textureLoader.load("img/tree1.png");
+        //const material1 = new THREE.SpriteMaterial({ map: texture1,});
 
-        const sprite1 = new THREE.Sprite(material1);
-        sprite1.position.x = 100;
-        sprite1.position.y = 0;
-        sprite1.position.z = -100;
-        sprite1.scale.set(100,100,100);
-        scene.add(sprite1);
+        //const sprite1 = new THREE.Sprite(material1);
+        //sprite1.position.x = 100;
+        //sprite1.position.y = 0;
+       // sprite1.position.z = -100;
+       // sprite1.scale.set(100,100,100);
+       // scene.add(sprite1);
 
 
         tick();
