--- a/lesson4/sample8-5.html
+++ b/lesson4/sample8-5.html
@@ -42,6 +42,13 @@
         // シーンに追加
         scene.add(directionalLight2);
 
+        // helper
+      const gridHelper = new THREE.GridHelper(200,50); // size, step
+      scene.add(gridHelper);
+
+      const axisHelper = new THREE.AxisHelper(200,50);
+      scene.add(axisHelper);
+
         // 木0をスプライトで作成
         var textureLoader = new THREE.TextureLoader();  
         var texture0 = textureLoader.load("img/tree0.png");
