--- a/lesson5/loader_3ds.html
+++ b/lesson5/loader_3ds.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset="utf-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js"></script>
-    <script src="js/controls/OrbitControls.js"></script>
-    <script src="js/loaders/TDSLoader.js"></script>
+    <script src="OrbitControls.js"></script>
+    <script src="loader/TDSLoader.js"></script>
 
     <script>
       // ページの読み込みを待つ
