--- a/lesson5/loader_dae.html
+++ b/lesson5/loader_dae.html
@@ -2,8 +2,8 @@
   <head>
     <meta charset="utf-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js"></script>
-    <script src="js/controls/OrbitControls.js"></script>
-    <script src="js/loaders/ColladaLoader.js"></script>
+    <script src="OrbitControls.js"></script>
+    <script src="loader/ColladaLoader.js"></script>
 
     <script>
       // ページの読み込みを待つ
@@ -46,7 +46,7 @@
         // 3DS形式のモデルデータを読み込む
         const loader = new THREE.ColladaLoader();
         // 3dsファイルのパスを指定
-        loader.load('./models/collada/elf/elf.dae', (collada) => {
+        loader.load('models/collada/elf/elf.dae', (collada) => {
           // 読み込み後に3D空間に追加
           const model = collada.scene;
           scene.add(model);
