--- a/lesson5/loader_3ds.html
+++ b/lesson5/loader_3ds.html
@@ -41,6 +41,12 @@
         const ambientLight = new THREE.AmbientLight(0xffffff);
         scene.add(ambientLight);
 
+        // 箱を作成(原点に作成)
+        var geometry = new THREE.BoxGeometry(300, 300, 300);
+        var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
+        var box = new THREE.Mesh(geometry, material);
+        scene.add(box);
+
         // 3DS形式のモデルデータを読み込む
         const loader = new THREE.TDSLoader();
         // テクスチャーのパスを指定
