--- a/lesson5/loader_3ds.html
+++ b/lesson5/loader_3ds.html
@@ -48,14 +48,14 @@
         scene.add(box);
 
         // 3DS形式のモデルデータを読み込む
-        const loader = new THREE.TDSLoader();
+        //const loader = new THREE.TDSLoader();
         // テクスチャーのパスを指定
-        loader.setResourcePath('models/3ds/portalgun/textures/');
+        //loader.setResourcePath('models/3ds/portalgun/textures/');
         // 3dsファイルのパスを指定
-        loader.load('models/3ds/portalgun/portalgun.3ds', (object) => {
+        //loader.load('models/3ds/portalgun/portalgun.3ds', (object) => {
           // 読み込み後に3D空間に追加
-          scene.add(object);
-        };
+        //  scene.add(object);
+        //};
 
         tick();
         // 毎フレーム時に実行されるループイベントです
