--- a/lesson5/loader_3ds.html
+++ b/lesson5/loader_3ds.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="OrbitControls.js"></script>
+    <script src="loaders/TDSLoader.js"></script>
     <script>
       // ページの読み込みを待つ
       window.addEventListener('load', init);
