--- a/lesson5/loader_3ds.html
+++ b/lesson5/loader_3ds.html
@@ -41,6 +41,16 @@
         // シーンに追加
         scene.add(directionalLight2);
 
+        // 3DS形式のモデルデータを読み込む
+        const loader = new THREE.TDSLoader();
+        // テクスチャーのパスを指定
+        loader.setResourcePath('models/3ds/portalgun/textures/');
+        // 3dsファイルのパスを指定
+        loader.load('models/3ds/portalgun/portalgun.3ds', (object) => {
+          // 読み込み後に3D空間に追加
+          scene.add(object);
+        });
+
         // 箱を作成(原点に作成)
         var geometry = new THREE.BoxGeometry(30, 30, 30);
         var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
