--- a/lesson5/loader_3ds.html
+++ b/lesson5/loader_3ds.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script src="OrbitControls.js"></script>
-    <script src="loaders/TDSLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js"></script>
+    <script src="js/controls/OrbitControls.js"></script>
+    <script src="js/loaders/TDSLoader.js"></script>
+
     <script>
       // ページの読み込みを待つ
       window.addEventListener('load', init);
@@ -14,32 +15,31 @@
         const height = 540;
 
         // レンダラーを作成
+        const canvasElement = document.querySelector('#myCanvas');
         const renderer = new THREE.WebGLRenderer({
-          canvas: document.querySelector('#myCanvas')
+          canvas: canvasElement,
         });
+        renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(width, height);
 
         // シーンを作成
         const scene = new THREE.Scene();
 
         // カメラを作成
-        const camera = new THREE.PerspectiveCamera(45, width / height);
+        const camera = new THREE.PerspectiveCamera(45, width / height, 0.1, 10000);
         // カメラの初期座標を設定
-        camera.position.set(0, 0, 1000);
+        camera.position.set(0, 0, 5);
 
         // カメラコントローラーを作成
-        const controls = new THREE.OrbitControls(camera,document.body);
-  
-        // 平行光源1
-        var directionalLight1 = new THREE.DirectionalLight(0xffffff);
-        directionalLight1.position.set(100, 100, 100);
-        // シーンに追加
-        scene.add(directionalLight1);
-        // 平行光源2
-        var directionalLight2 = new THREE.DirectionalLight(0xffffff);
-        directionalLight2.position.set(-100, 100, 100);
-        // シーンに追加
-        scene.add(directionalLight2);
+        const controls = new THREE.OrbitControls(camera, canvasElement);
+
+        // 平行光源を作成
+        const directionalLight = new THREE.DirectionalLight(0xffffff);
+        directionalLight.position.set(1, 1, 1);
+        scene.add(directionalLight);
+        // 環境光を追加
+        const ambientLight = new THREE.AmbientLight(0xffffff);
+        scene.add(ambientLight);
 
         // 3DS形式のモデルデータを読み込む
         const loader = new THREE.TDSLoader();
@@ -51,14 +51,7 @@
           scene.add(object);
         });
 
-        // 箱を作成(原点に作成)
-        var geometry = new THREE.BoxGeometry(30, 30, 30);
-        var material = new THREE.MeshPhongMaterial({ color: 0x0000ff });
-        var box = new THREE.Mesh(geometry, material);
-        scene.add(box);
-
         tick();
-
         // 毎フレーム時に実行されるループイベントです
         function tick() {
           // レンダリング
@@ -68,7 +61,6 @@
       }
     </script>
   </head>
-
   <body>
     <canvas id="myCanvas"></canvas>
   </body>
