--- a/lesson5/house_3ds.html
+++ b/lesson5/house_3ds.html
@@ -34,11 +34,11 @@
         const controls = new THREE.OrbitControls(camera, canvasElement);
 
         // 平行光源を作成
-        const directionalLight = new THREE.DirectionalLight(0xffffff);
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.1);
         directionalLight.position.set(100, 300, 100);
         scene.add(directionalLight);
         // 環境光を追加
-        const ambientLight = new THREE.AmbientLight(0xffffff);
+        const ambientLight = new THREE.AmbientLight(0xffffff, 1.0);
         scene.add(ambientLight);
 
         // 3DS形式のモデルデータを読み込む
