--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="loader_3ds.html">3dsMaxで作ったデータ</a></li>
             <li><a href="loader_dae.html">COLLADAデータ（PlayStation）</a></li>
+            <li><a href="cottage_3ds.html">Freeモデルをダウンロード</a></li>
         </ul>
         ビルボード例：
         <ul>
