--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,7 @@
 const camera = new THREE.PerspectiveCamera(45, width / height); // カメラの初期座標を設定
 camera.position.set(0, 0, 1000);
 // カメラコントローラーを作成
-const controls = new THREE.OrbitControls(camera,document.body);
+//const controls = new THREE.OrbitControls(camera,document.body);
 
  // テクスチャー読み込み
  //var textureLoader = new THREE.TextureLoader();  
