--- a/lesson5/loader_fbx.html
+++ b/lesson5/loader_fbx.html
@@ -48,6 +48,7 @@
         // FBXファイルのパスを指定
         loader.load('models/chair/Chair_1.fbx', (object) => {
           // 読み込み後に3D空間に追加
+          object.scale.set(0.001, 0.001, 0.001);
           scene.add(object);
         });
 
