--- a/lesson5/loader_fbx.html
+++ b/lesson5/loader_fbx.html
@@ -46,7 +46,7 @@
         // テクスチャーのパスを指定
         //loader.setResourcePath('models/3ds/portalgun/textures/');
         // FBXファイルのパスを指定
-        loader.load('models/chair/Chair_1.fbx', (object) => {
+        loader.load('models/chair/SambaDancing.fbx', (object) => {
           // 読み込み後に3D空間に追加
           object.scale.set(0.001, 0.001, 0.001);
           scene.add(object);
