--- a/three.js/examples/2webgl_loader_fbx.html
+++ b/three.js/examples/2webgl_loader_fbx.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 	<head>
-		<title>three.js webgl - FBX loader</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
-	</head>
-
-	<body>
-		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - FBXLoader<br />
-			Character and animation from <a href="https://www.mixamo.com/" target="_blank" rel="noopener">Mixamo</a>
-		</div>
 
 		<script type="module">
 
@@ -137,6 +129,13 @@
 			}
 
 		</script>
+	</head>
+
+	<body>
+		<div id="info">
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - FBXLoader<br />
+			Character and animation from <a href="https://www.mixamo.com/" target="_blank" rel="noopener">Mixamo</a>
+		</div>
 
 	</body>
 </html>
