--- a/three.js/examples/2webgl_loader_fbx.html
+++ b/three.js/examples/2webgl_loader_fbx.html
@@ -7,7 +7,7 @@
 
 		<script type="module">
 
-			import * as THREE from '../build/three.module.js';
+			import * as THREE from '../build/three.min.js';
 
 			import Stats from './jsm/libs/stats.module.js';
 
