--- a/lesson5/loader_fbx.html
+++ b/lesson5/loader_fbx.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 	<head>
     <meta charset="utf-8" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.module.js"></script>
     <script src="js/controls/OrbitControls.js"></script>
     <script src="js/loaders/FBXLoader.js"></script>
 
