--- a/three.js/examples/2webgl_loader_fbx.html
+++ b/three.js/examples/2webgl_loader_fbx.html
@@ -5,7 +5,7 @@
 
 		<script type="module">
 
-			import * as THREE from "https://cdnjs.cloudflare.com/ajax/libs/three.js/r127/three.module.js";
+			import * as THREE from './jsm/build/three.module.js';
 
 			import Stats from './jsm/libs/stats.module.js';
 
