--- a/three.js/examples/2webgl_loader_fbx.html
+++ b/three.js/examples/2webgl_loader_fbx.html
@@ -18,7 +18,9 @@
 
 			let mixer;
 
-			init();
+			//init();
+			      // ページの読み込みを待つ
+				  window.addEventListener('load', init);
 			animate();
 
 			function init() {
