--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -14,12 +14,18 @@
             <li><a href="loader_dae.html">COLLADAデータ（PlayStation）</a></li>
             <li><a href="cottage_3ds.html">Freeモデルをダウンロード</a></li>
         </ul>
-        ビルボード例：
+        本山のサンプルから（いろいろな）データの読み込み：
         <ul>
-            <li><a href="sample8-3.html">sample8-3.html</a></li>
-            <li><a href="sample8-4.html">sample8-4.html</a></li>
-            <li><a href="sample8-5.html">sample8-5html</a></li>
-        </ul>       
+            <li><a href="../three.js/exsamples/webgl_loader_fbx.html">fbxのアニメーションファイルの再生</a></li>
+            <li><a href="../three.js/exsamples/webgl_loader_gltf.html">glftの読み込み</a></li>
+            <li><a href="../three.js/exsamples/webgl_loader_obj_mtl.html">objの読み込み</a></li>
+        </ul>
+        本山のサンプルから（いろいろな）アニメーション：
+        <ul>
+            <li><a href="../three.js/exsamples/webgl_animation_keyframes.html">Keyフレームアニメーションの再生</a></li>
+            <li><a href="../three.js/exsamples/webgl_animation_cloth.html">clothアニメーション</a></li>
+            <li><a href="../three.js/exsamples/webgl_animation_skinning_additive_blending.html">アニメーションの合成</a></li>
+        </ul>     
     </p>
 </body>
 </html>
