--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -16,15 +16,15 @@
         </ul>
         本山のサンプルから（いろいろな）データの読み込み：
         <ul>
-            <li><a href="../three.js/examples/webgl_loader_fbx.html">fbxのアニメーションファイルの再生</a></li>
-            <li><a href="../three.js/examples/webgl_loader_gltf.html">glftの読み込み</a></li>
-            <li><a href="../three.js/examples/webgl_loader_obj_mtl.html">objの読み込み</a></li>
+            <li><a href="https://threejs.org/examples/webgl_loader_fbx.html">fbxのアニメーションファイルの再生</a></li>
+            <li><a href="https://threejs.org/examples/webgl_loader_gltf.html">glftの読み込み</a></li>
+            <li><a href="https://threejs.org/examples/webgl_loader_obj_mtl.html">objの読み込み</a></li>
         </ul>
         本山のサンプルから（いろいろな）アニメーション：
         <ul>
-            <li><a href="../three.js/examples/webgl_animation_keyframes.html">Keyフレームアニメーションの再生</a></li>
-            <li><a href="../three.js/examples/webgl_animation_cloth.html">clothアニメーション</a></li>
-            <li><a href="../three.js/examples/webgl_animation_skinning_additive_blending.html">アニメーションの合成</a></li>
+            <li><a href="https://threejs.org/examples/webgl_animation_keyframes.html">Keyフレームアニメーションの再生</a></li>
+            <li><a href="https://threejs.org/examples/webgl_animation_cloth.html">clothアニメーション</a></li>
+            <li><a href="https://threejs.org/examples/webgl_animation_skinning_additive_blending.html">アニメーションの合成</a></li>
         </ul>     
     </p>
 </body>
