--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -8,7 +8,15 @@
     <h1>WebGL演習（６）</h1>
     <h2>パーティクル</h2>
     <p>
-        外部モデルデータの読み込み例：
+        Three.Spriteで大量に発生さる方法：
+        <ul>
+            <li><a href="sample11-1.html">Fogなし</a></li>
+            <li><a href="sample11-2.html">Fogあり</a></li>
+            <li><a href="sample11-3.html">テクスチャーあり</a></li>
+        </ul>
+    </p>
+    <p>
+        多くの物体を表示：
         <ul>
             <li><a href="sample4.html">3dsMaxで作ったデータ</a></li>
             <li><a href="sample5.html">3dsMaxで作ったデータ</a></li>
