--- a/lesson6/sample11-1.html
+++ b/lesson6/sample11-1.html
@@ -22,7 +22,7 @@
         const scene = new THREE.Scene();
 
         // フォグを設定
-        scene.fog = new THREE.Fog(0x000000, 50, 2000);
+        //scene.fog = new THREE.Fog(0x000000, 50, 2000);
 
         // カメラを作成
         const camera = new THREE.PerspectiveCamera(45, width / height);
@@ -42,7 +42,9 @@
         // グループを作成
         const group = new THREE.Group();
         scene.add(group);
-        const geometry = new THREE.BoxGeometry(50, 50, 50);
+
+        //個々の物体を定義
+        const geometry = new THREE.SphereGeometry(50, 50, 50);
         const material = new THREE.MeshStandardMaterial();
 
         for (let i = 0; i < 1000; i++) {
