--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -8,11 +8,11 @@
     <h1>WebGL演習（６）</h1>
     <h2>パーティクル</h2>
     <p>
-        Three.Spriteで大量に発生さる方法：
+        For ループで　大量に発生させる方法：
         <ul>
-            <li><a href="sample11-1.html">Fogなし</a></li>
-            <li><a href="sample11-2.html">Fogあり</a></li>
-            <li><a href="sample11-3.html">テクスチャーあり</a></li>
+            <li><a href="sample11-1.html">グループでFogなし</a></li>
+            <li><a href="sample11-2.html">グループでFogあり</a></li>
+            <li><a href="sample11-3.html">スプライト（ビルボード）でFogあり</a></li>
         </ul>
     </p>
     <p>
