--- a/lesson6/sample11-3.html
+++ b/lesson6/sample11-3.html
@@ -39,24 +39,23 @@
         const axisHelper = new THREE.AxisHelper(1000); //軸の長さ　X：赤、Y：緑、z：青
         scene.add(axisHelper);
 
-        // グループを作成
-        const group = new THREE.Group();
-        scene.add(group);
-        const geometry = new THREE.BoxGeometry(50, 50, 50);
-        const material = new THREE.MeshStandardMaterial();
+        // マテリアルを作成する
+        const material = new THREE.SpriteMaterial({
+          map: new THREE.TextureLoader().load('imgs/star.png'),
+        });
 
+        // ビルボードを作成
         for (let i = 0; i < 1000; i++) {
-          const mesh = new THREE.Mesh(geometry, material);
-          mesh.position.x = (Math.random() - 0.5) * 2000;
-          mesh.position.y = (Math.random() - 0.5) * 2000;
-          mesh.position.z = (Math.random() - 0.5) * 2000;
-          mesh.rotation.x = Math.random() * 2 * Math.PI;
-          mesh.rotation.y = Math.random() * 2 * Math.PI;
-          mesh.rotation.z = Math.random() * 2 * Math.PI;
-          // グループに格納する
-          group.add(mesh);
-        }
+          const sprite = new THREE.Sprite(material);
+          // ランダムな座標に配置
+          sprite.position.x = 500 * (Math.random() - 0.5);
+          sprite.position.y = 100 * Math.random() - 40;
+          sprite.position.z = 500 * (Math.random() - 0.5);
+          // 必要に応じてスケールを調整
+          sprite.scale.set(10, 10, 10);
 
+          scene.add(sprite);
+        }
      
       　 // 光源（環境光）
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.2);
