--- a/lesson6/sample11-3.html
+++ b/lesson6/sample11-3.html
@@ -21,7 +21,10 @@
         // シーンを作成
         const scene = new THREE.Scene();
 
-        // フォグを設定
+        // 背景色を設定（光源が関係ないので）
+        renderer.setClearColor(0xf9f9f9, 1.0);
+
+        // シーン全体のフォグを設定
         scene.fog = new THREE.Fog(0x000000, 50, 2000);
 
         // カメラを作成
