--- a/lesson6/sample11-3.html
+++ b/lesson6/sample11-3.html
@@ -57,7 +57,7 @@
           // 必要に応じてスケールを調整
           sprite.scale.set(10, 10, 10);
 
-          scene.add(sprite);
+          //scene.add(sprite);
         }
      
       　 // 光源（環境光）
