--- a/lesson6/sample11-3.html
+++ b/lesson6/sample11-3.html
@@ -82,9 +82,9 @@
         function tick() {
           // レンダリング
           // カメラの自動移動
-          camera.position.y = 50 * Math.sin(Date.now() / 1000) + 60;
+          camera.rotateY(0.01) ;
           camera.lookAt(new THREE.Vector3(0, 0, 0));
-          
+
           renderer.render(scene, camera);
           requestAnimationFrame(tick);
         }
