--- a/lesson6/sample11-3.html
+++ b/lesson6/sample11-3.html
@@ -34,7 +34,7 @@
 
         // カメラコントローラーを作成
         const controls = new THREE.OrbitControls(camera);
-        controls.autoRotate = true;
+        //controls.autoRotate = true;
 
         // helper
         const gridHelper = new THREE.GridHelper(1000,20); // size, step
